# margarita

./: .gitignore  CNAME  LICENSE  Makefile  README.md  RELEASE_NOTES.md  install-linux.sh  install-macos.sh  install-windows.ps1  pyproject.toml  versions.json
.github/prompts/: create-release.md  create-release.prompt.md
.github/workflows/: deploy-gh-pages.yml  publish.yml
.margarita/: create-release.mgx
0.3.2/: index.html
0.3.2/getting_started/: index.html
0.3.3/search/: search_index.json
0.3.5/loops/: index.html
0.3.5/use-in-agents/: index.html
0.3.5/variables/: index.html
0.3.6/basic/: index.html
0.3.6/loops/: index.html
0.3.6/mgx/: index.html
0.3.7/include_files/: index.html
0.3.7/mcp/: index.html
0.3.7/metadata/: index.html
0.3.8/: index.html
0.3.8/basic/: index.html
0.3.8/claude_skill/: index.html
0.3.8/conditionals/: index.html
0.3.8/contexts/: index.html
0.3.8/getting_started/: index.html
0.3.8/includes/: index.html
0.3.8/loops/: index.html
0.3.8/mcp/: index.html
0.3.8/mgx/: index.html
0.3.8/search/: search_index.json
0.3.9/include_files/: index.html
0.3.9/uv_packages/: index.html
0.4.0/: 404.html  index.html
0.4.0/includes/: index.html
0.4.0/jetbrains_plugin/: index.html
0.4.0/loops/: index.html
0.4.0/metadata/: index.html
0.4.0/search/: search_index.json
0.4.1/contexts/: index.html
0.4.2/getting_started/: index.html
0.4.2/search/: search_index.json
0.4.2/use-in-agents/: index.html
0.4.3/stylesheets/: extra.css
0.5.0/: 404.html  index.html
0.5.0/basic/: index.html
0.5.0/claude_skill/: index.html
0.5.0/coming_soon/: index.html
0.5.0/conditionals/: index.html
0.5.0/context_management/: index.html
0.5.0/contexts/: index.html
0.5.0/custom_tools/: index.html
0.5.0/function_calls/: index.html
0.5.0/getting_started/: index.html
0.5.0/include_files/: index.html
0.5.0/includes/: index.html
0.5.0/jetbrains_plugin/: index.html
0.5.0/logging/: index.html
0.5.0/loops/: index.html
0.5.0/memory/: index.html
0.5.0/metadata/: index.html
0.5.0/mgx/: index.html
0.5.0/prompt_locking/: index.html
0.5.0/running_the_agent/: index.html
0.5.0/search/: search_index.json
0.5.0/state/: index.html
0.5.0/sub_runs/: index.html
0.5.0/use-in-agents/: index.html
0.5.0/user_input/: index.html
0.5.0/uv_packages/: index.html
0.5.0/variables/: index.html
0.5.3/: 404.html  index.html
0.5.3/await_all/: index.html
0.5.3/basic/: index.html
0.5.3/claude_skill/: index.html
0.5.3/coming_soon/: index.html
0.5.3/conditionals/: index.html
0.5.3/context_management/: index.html
0.5.3/contexts/: index.html
0.5.3/custom_tools/: index.html
0.5.3/function_calls/: index.html
0.5.3/getting_started/: index.html
0.5.3/hello/: index.html
0.5.3/include_files/: index.html
0.5.3/includes/: index.html
0.5.3/jetbrains_plugin/: index.html
0.5.3/logging/: index.html
0.5.3/loops/: index.html
0.5.3/memory/: index.html
0.5.3/metadata/: index.html
0.5.3/mg/: index.html
0.5.3/mgx/: index.html
0.5.3/prompt_locking/: index.html
0.5.3/running_the_agent/: index.html
0.5.3/search/: search_index.json
0.5.3/state/: index.html
0.5.3/stopping/: index.html
0.5.3/sub_runs/: index.html
0.5.3/use-in-agents/: index.html
0.5.3/user_input/: index.html
0.5.3/uv_packages/: index.html
0.5.3/variables/: index.html
0.6.0/claude_skill/: index.html
0.6.0/jetbrains_plugin/: index.html
0.6.0/metadata/: index.html
0.6.0/mgx/: index.html
0.6.0/model_backends/: index.html
0.6.0/prompt_locking/: index.html
0.6.0/search/: search_index.json
0.6.0/user_input/: index.html
0.6.1/function_calls/: index.html
0.6.1/include_files/: index.html
0.6.1/includes/: index.html
0.6.1/loops/: index.html
0.6.2/basic/: index.html
0.6.2/markdown/: index.html
0.6.2/memory/: index.html
0.7.0/: index.html
0.7.0/await_all/: index.html
0.7.0/coming_soon/: index.html
0.7.0/context_management/: index.html
0.7.0/contexts/: index.html
0.7.0/custom_tools/: index.html
0.7.0/loops/: index.html
0.7.0/search/: search_index.json
docs/: hooks.py  mkdocs.yml
docs/lexers/: margarita_lexer.py
docs/pages/: await_all.md  basic.md  claude_skill.md  coming_soon.md  conditionals.md  context_management.md  custom_tools.md  function_calls.md  getting_started.md  hello.md  include_files.md  includes.md  index.md  logging.md  loops.md  markdown.md  memory.md  metadata.md  mg.md  mgx.md  model_backends.md  prompt_locking.md  running_the_agent.md  state.md  (+6 more)
v0.3.3/: index.html
(+238 files in other folders)
