[project]
name = "margarita"
version = "0.5.3"
description = "A lightweight markup language and Python library for writing, composing, and rendering structured LLM prompts."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Kyle Reczek", email = "kyle@banyango.com" }
]
maintainers = [
    { name = "Kyle Reczek", email = "kyle@banyango.com" }
]
keywords = ["prompt-engineering", "templating", "margarita", "llm", "markup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.13.0",
    "click>=8.0.0",
    "github-copilot-sdk>=0.1.25",
    "loguru>=0.7.3",
    "margarita-open-agent",
    "pygments>=2.19.2",
    "rich>=15.0.0",
    "textual>=8.2.3",
    "wireup>=2.9.0",
]

[project.scripts]
margarita = "margarita.cli_main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Banyango/margarita"
Documentation = "https://banyango.github.io/margarita"
Repository = "https://github.com/Banyango/margarita"
Issues = "https://github.com/Banyango/margarita/issues"
Changelog = "https://github.com/Banyango/margarita/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margarita"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["margarita"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ignore specific simplify rule SIM108
    "PTH123", # ignore specific pathlib rule PTH123
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # unused function arguments in tests
    "S101",   # use of assert in tests
    "RUF059", # ignore specific ruff rule RUF059
]

[tool.ruff.lint.isort]
known-first-party = ["margarita"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.uv.sources]
margarita-open-agent = { path = "../margarita-open-agent" }

[dependency-groups]
dev = [
    "click>=8.3.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocstrings-python>=2.0.1",
    "pygments>=2.19.2",
    "pyinstaller>=6.18.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
test = [
    "pytest>=9.0.2",
]
